# cardgame

./: CMakeLists.txt  README.md  make-linux.sh  make-win.bat
game/: Main.cpp
include/cardgame/: Game.hpp
src/: Game.cpp  Game.hpp  Main.cpp  Presentation.cpp  Presentation.hpp
tests/: CMakeLists.txt  GameTest.cpp
